--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Cool Responsive Portfolio Website Design</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -57,6 +57,7 @@
 
             <a href="#" class="btn">Download CV</a>
         </div>
+
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
@@ -81,7 +82,6 @@
 
             <div class="overlay"></div>
         </div>
-
 
         <div class="home-img">
             <img src="images/home.png" alt="">
@@ -238,9 +238,9 @@
                             dolores.</p>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
                         <img src="images/testimonial3.jpg" alt="">
                         <h3>Julian Grayson</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
                             iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
                             assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
                             provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
@@ -277,7 +277,7 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright © 2023 | All Rights Reserved.</p>
+            <p>Copyright &copy; 2023 | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
