--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="port.css">
 </head>
 
 <body>
@@ -129,28 +129,28 @@
                 <h3>Web Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
                     eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Leia Mais</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
                 <h3>Graphic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
                     eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Leia Mais</a>
             </div>
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt'></i>
                 <h3>Digital Marketing</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
                     eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Leia Mais</a>
             </div>
         </div>
     </section>
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
+        <h2 class="heading">Projetos mais <span>recentes</span></h2>
 
         <div class="portfolio-container">
             <div class="portfolio-box">
@@ -258,26 +258,26 @@
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+        <h2 class="heading">Entre em contato <span>Comigo!</span></h2>
 
         <form action="#">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
+                <input type="text" placeholder="Nome Completo">
+                <input type="email" placeholder="Endereço de Email">
             </div>
             <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
+                <input type="number" placeholder="Número de Celular">
+                <input type="text" placeholder="Assunto do Email">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Sua Mensagem"></textarea>
+            <input type="submit" value="Enviar Mensagem" class="btn">
         </form>
     </section>
 
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 | All Rights Reserved.</p>
+            <p>Copyright &copy; 2023 | Todos os direitos reservados.</p>
         </div>
 
         <div class="footer-iconTop">
@@ -293,7 +293,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
     <!-- custom js -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
