--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Responsive Portfolio Website Design</title>
+    <title>Portfolio Cauã Zanete Souza</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -21,14 +21,14 @@
 
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio.</a>
+        <a href="#" class="logo"><img src="Logo portifólio.png" alt=""></a>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#about">Sobre</a>
+            <a href="#services">Habilidades</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contato</a>
         </nav>
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -39,42 +39,38 @@
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, I am</h3>
-            <h1>Cristian Chiriac</h1>
+            <h3>Olá, eu sou o</h3>
+            <strong><h1>Cauã</h1></strong>
             <p>
-                I'm a web developer who loves to create beautiful and functional websites
-                for people who want to make a difference in the world.
+                Sou um desenvolvedor que adora criar sites bonitos e funcionais
+                para pessoas que querem fazer a diferença no mundo.
             </p>
-            <p>Currently I'm a student of The Jump Digital School, where I'm learning how to
-            create beautiful and functional websites using HTML, CSS, JavaScript, and WordPress.</p>
+            <p>Atualmente sou aluno da escola COTEMIG, onde estou aprendendo a
+                crie sites bonitos e funcionais usando HTML, CSS, JavaScript, C# e MySQL.</p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="_Curriculo oficial.pdf" class="btn">Vizualizar Currículo</a>
         </div>
 
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
                     <i class='bx bx-code-alt'></i>
-                    <h3>Web Developer</h3>
+                    <h3>Desenvolvedor Web</h3>
                 </div>
                 <div class="profession" style="--i:1;">
                     <i class='bx bx-camera'></i>
-                    <h3>Photographer</h3>
+                    <h3>Desenvolvedor Back-end</h3>
                 </div>
                 <div class="profession" style="--i:2;">
                     <i class='bx bx-palette'></i>
-                    <h3>Web Designer</h3>
-                </div>
-                <div class="profession" style="--i:3;">
-                    <i class='bx bx-video-recording'></i>
-                    <h3>Videographer</h3>
+                    <h3>Marketing Digital</h3>
                 </div>
 
                 <div class="circle"></div>
@@ -95,168 +91,65 @@
         </div>
 
         <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
+            <h2 class="heading">Sobre <span>Mim</span></h2>
             <h3>
-                Hi there, welcome to my website! I'm Cristian,
-                a passionate web developer who enjoys learning new technologies
-                and solving problems with code!
+                Olá, bem-vindo ao meu site! Eu sou Cauã,
+                um desenvolvedor apaixonado que gosta de aprender novas tecnologias
+                e resolvendo problemas com código!
             </h3>
             <p>
-                This website is my personal blog where I write about web development
-                topics that interest me and inspire me.
+                Este site é meu blog pessoal onde documento minha evolução e
+                temas que me interessam e me inspiram.
             </p>
             <p>
-                Thank you for visiting my website and getting to know me better. I hope you
-                enjoyed reading my blog posts and
-                found
-                them useful and informative. If you want to read more of my posts, subscribe
-                to my newsletter where I send
-                weekly
-                updates on web development trends and tips. If you have any feedback or
-                suggestions, please let me know. I'd love to hear from you.
+                Obrigado por visitar meu site e me conhecer melhor. Eu espero que você
+                Gostei de ler as postagens do meu blog e
+                encontrado
+                são úteis e informativos.  Se você tiver algum comentário ou
+                sugestões, por favor me avise. Eu adoraria ouvir de você.
             </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="#" class="btn">Saiba Mais</a>
         </div>
     </section>
 
     <!-- services section design -->
     <section class="services" id="services">
-        <h2 class="heading">My <span>Services</span></h2>
+        <h2 class="heading">Minhas <span>Habilidades</span></h2>
 
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
+                <h3>Desenvolvimento Web</h3>
+                <p>No desenvolvento web é possível dar vida à nossos projetos.</p>
                 <a href="#" class="btn">Leia Mais</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
-                <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
+                <h3>Desenvolvimento Back-end</h3>
+                <p>Nessa parte fazemos com que o projeto funcione</p>
                 <a href="#" class="btn">Leia Mais</a>
             </div>
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt'></i>
-                <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
+                <h3>Marketing Digital</h3>
+                <p>Aqui é onde trabalho para que o projeto chege até as pessoas e se posicione bem nos buscadores da internet</p>
                 <a href="#" class="btn">Leia Mais</a>
             </div>
         </div>
     </section>
 
-    <!-- portfolio section design -->
+    <!-- Meus Projetos -->
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Projetos mais <span>recentes</span></h2>
 
         <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
+            <div class="frutas"><img src="site frutas.png" alt=""></div>
+            <div class="CBUM"><img src="site CBUM.png" alt=""></div>
+            <div class="mulher"><img src="Site mulher.png" alt=""></div>
         </div>
     </section>
-
-    <!-- testimonial design -->
-    <div class="testimonial-container">
-        <h2 class="heading">Valuable <span>Testimonial</span></h2>
-
-        <div class="testimonial-wrapper">
-            <div class="testimonial-box mySwiper">
-                <div class="testimonial-content swiper-wrapper">
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial1.jpg" alt="">
-                        <h3>Jackson Levi</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial2.jpg" alt="">
-                        <h3>Flora Ocean</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial3.jpg" alt="">
-                        <h3>Julian Grayson</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                </div>
-
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
-
-    <!-- contact section design -->
+    
+    <!-- seção de contato -->
     <section class="contact" id="contact">
         <h2 class="heading">Entre em contato <span>Comigo!</span></h2>
 
